add and adjust config