@@ -1,27 +1,45 @@
     package com.riri.eventhop.config;
 
 
-    import jakarta.servlet.http.HttpServletResponse;
+    import com.nimbusds.jose.jwk.JWK;
+    import com.nimbusds.jose.jwk.JWKSet;
+    import com.nimbusds.jose.jwk.RSAKey;
+    import com.nimbusds.jose.jwk.source.ImmutableJWKSet;
+    import com.nimbusds.jose.jwk.source.JWKSource;
+    import com.nimbusds.jose.proc.SecurityContext;
+    import com.riri.eventhop.feature2.users.UserDetailsServiceImpl;
+    import io.jsonwebtoken.security.Keys;
     import lombok.RequiredArgsConstructor;
     import lombok.extern.java.Log;
+    import org.springframework.beans.factory.annotation.Value;
     import org.springframework.context.annotation.Bean;
     import org.springframework.context.annotation.Configuration;
+    import org.springframework.security.authentication.AuthenticationManager;
+    import org.springframework.security.authentication.ProviderManager;
+    import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+    import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
     import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
     import org.springframework.security.config.annotation.web.builders.HttpSecurity;
     import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
     import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
     import org.springframework.security.config.http.SessionCreationPolicy;
+    import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+    import org.springframework.security.crypto.password.PasswordEncoder;
     import org.springframework.security.oauth2.jwt.JwtDecoder;
+    import org.springframework.security.oauth2.jwt.JwtEncoder;
     import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
+    import org.springframework.security.oauth2.jwt.NimbusJwtEncoder;
     import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
     import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
-    import org.springframework.security.web.AuthenticationEntryPoint;
     import org.springframework.security.web.SecurityFilterChain;
     import org.springframework.web.cors.CorsConfiguration;
     import org.springframework.web.cors.CorsConfigurationSource;
     import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+    import javax.crypto.SecretKey;
     import java.util.Arrays;
+    import java.util.Base64;
+    import java.util.List;
 
     @Configuration
     @EnableWebSecurity
@@ -29,7 +47,9 @@
     @RequiredArgsConstructor
     @Log
     public class SecurityConfig {
+        private final UserDetailsServiceImpl userDetailsService;
         private final RsaKeyConfigProperties rsaKeyConfigProperties;
+
         @Bean
         public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
             return http
@@ -37,11 +57,17 @@
                     .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                     .authorizeHttpRequests(auth -> {
                         auth.requestMatchers("/api/v1/events/**").permitAll();
-                        auth.requestMatchers("/api/v1/categories/**").permitAll();
-                        auth.requestMatchers("/api/v1/images/**").hasRole("ORGANIZER");
-//                        auth.requestMatchers("/api/v1/dashboard/**").hasRole("ORGANIZER"); flow not clear yet
+//                        auth.requestMatchers("/api/v1/categories/**").permitAll();
+                        auth.requestMatchers("/api/v1/auth/login", "/api/v1/auth/login/oauth").permitAll();
+                        auth.requestMatchers("/api/v1/dashboard/**").hasRole("ORGANIZER");
                         auth.anyRequest().authenticated();
                     })
+                    .oauth2Login(oauth2 -> oauth2
+                            .authorizationEndpoint(authorization -> authorization
+                                    .baseUri("/api/v1/auth/oauth2/authorization"))
+                            .redirectionEndpoint(redirection -> redirection
+                                    .baseUri("/api/v1/auth/oauth2/callback/*"))
+                    )
                     .oauth2ResourceServer(oauth2 -> oauth2
                             .jwt(jwt -> jwt
                                     .decoder(jwtDecoder())
@@ -55,9 +81,9 @@
         @Bean
         public CorsConfigurationSource corsConfigurationSource() {
             CorsConfiguration configuration = new CorsConfiguration();
-            configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000")); // Add your front-end URL
+            configuration.setAllowedOrigins(List.of("http://localhost:3000")); // Add your front-end URL
             configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-            configuration.setAllowedHeaders(Arrays.asList("*"));
+            configuration.setAllowedHeaders(List.of("*"));
             configuration.setAllowCredentials(true);
             UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
             source.registerCorsConfiguration("/**", configuration);
@@ -65,22 +91,36 @@
         }
 
         @Bean
-        public AuthenticationEntryPoint authenticationEntryPoint() {
-            return (request, response, authException) -> {
-                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-                response.getWriter().write("Unauthorized: " + authException.getMessage());
-            };
+        PasswordEncoder passwordEncoder() {
+            return new BCryptPasswordEncoder();
         }
-
         @Bean
         public JwtDecoder jwtDecoder() {
             return NimbusJwtDecoder.withPublicKey(rsaKeyConfigProperties.publicKey()).build();
         }
 
+        @Bean
+        JwtEncoder jwtEncoder() {
+            JWK jwk = new RSAKey.Builder(rsaKeyConfigProperties.publicKey()).privateKey(rsaKeyConfigProperties.privateKey()).build();
+            JWKSource<SecurityContext> jwks = new ImmutableJWKSet<>(new JWKSet(jwk));
+            return new NimbusJwtEncoder(jwks);
+        }
 //        @Bean
 //        public JwtDecoder jwtDecoder() {
-//            return NimbusJwtDecoder.withJwkSetUri("https://dynamic-terrapin-33.clerk.accounts.dev/.well-known/jwks.json").build();
+//            return NimbusJwtDecoder.withSecretKey(getSecretKey()).build();
 //        }
+//
+//        private SecretKey getSecretKey() {
+//            byte[] keyBytes = Base64.getDecoder().decode(jwtSecret);
+//            return Keys.hmacShaKeyFor(keyBytes);
+//        }
+        @Bean
+        public AuthenticationManager authManager() {
+            var authProvider = new DaoAuthenticationProvider();
+            authProvider.setUserDetailsService(userDetailsService);
+            authProvider.setPasswordEncoder(passwordEncoder());
+            return new ProviderManager(authProvider);
+        }
 
         @Bean
         public JwtAuthenticationConverter jwtAuthenticationConverter() {
